# agentic-labs

./: .gitignore  CA1.ipynb  CA2.ipynb  CA3.ipynb  CA3.py  DU_crm.csv  GenAI CA2.ipynb  PGW_crm.csv  README.md  abvs.json  ca2_1-90914651.csv  ca2_1-e499b953.csv  ca_lg_slm.ipynb  chat_bot.py  church_street_dublin_2024.csv  codeact_db.py  combined_property_results.csv  contacts.db  crm.csv  data_pipeline.ipynb  df.parquet.gzip  diagnostic.py  email_output.csv  exercises.ipynb  gdpr_sections.db  hello_58bcd07e-ffaa-4494-ab7a-964253e54e04.txt  langchain_patch.py  langsmith_sdk_eval_tutorial.ipynb  leinster.text  mbpp_san_train.csv  netflix.db  properties_data.csv  property_results.csv  pyproject.toml  subgraph_example_imdb.ipynb  test.pkl  test.py  test.txt  test1.py  test2.py  (+16 more)
MCP Server Examples-20251215/: get-time-svr.py  get-time.py  music_catalog_mcp.py  sddio_client_connetion.py
templates/: add_contact.html  base.html  list_contacts.html
