[project]
name = "agentic-labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.2",
    "codeium-jupyter>=2.1.2",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.6",
    "langchain-openai>=0.3.27",
    "langchain-sandbox>=0.0.6",
    "langgraph>=0.5.0",
    "langtrace-python-sdk>=3.8.21",
    "pandas>=2.3.1",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
    "tavily-python>=0.7.12",
    "playwright>=1.55.0",
    "pytest-playwright>=0.7.1",
    "flask>=3.1.2",
    "notebook>=7.5.0",
]

[dependency-groups]
dev = []
